Closed Bug 1696988 Opened 3 years ago Closed 3 years ago

Tooltips on about:preferences look weird

Categories

(Core :: Widget: Cocoa, defect, P2)

defect

Tracking

()

VERIFIED FIXED
88 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox86 --- unaffected
firefox87 --- unaffected
firefox88 --- verified
firefox89 --- verified

People

(Reporter: yoasif, Assigned: emilio)

References

(Regression)

Details

(Keywords: nightly-community, regression, Whiteboard: [mac:nonnativetheme])

Attachments

(4 files, 1 obsolete file)

See screenshot.

  1. Visit about:preferences, hover over one of the sidebar navigation buttons (General, Home, etc.)

85:35.46 INFO: Narrowed inbound regression window from [aefea952, 8e20b753] (3 builds) to [aefea952, e6cd9ff9] (2 builds) (~1 steps left)
85:35.49 INFO: No more inbound revisions, bisection finished.
85:35.49 INFO: Last good revision: aefea952b6974c29eb0503b419c3f3f236165921
85:35.49 INFO: First bad revision: e6cd9ff9eca2b2b3c45abde7fd8b62e79cf1aa38
85:35.49 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=aefea952b6974c29eb0503b419c3f3f236165921&tochange=e6cd9ff9eca2b2b3c45abde7fd8b62e79cf1aa38

Has Regression Range: --- → yes
Has STR: --- → yes
Regressed by: 1690842
Assignee: nobody → emilio

The Linux styles match Adwaita trunk1, so it's a bit smaller than the
native ones but I think that's fine (it matches other themes more
closely, like Arc).

On OSX the system color needs to be tweaked (will do in a follow-up)
since it is windows-style yellow right now, which is rather ugly. But
this is a progression regardless.

Like it is in other platforms. We have no uses of this on the UI currently
except the one in the other patch on this bug, if I'm reading it correctly, and
this makes the popups look decent.

I have another alternative / complementary patch on the bug if you want, but
this shouldn't be objectionable regardless I think.

Like it is in other platforms. We have no uses of this on the UI currently
except the one in the other patch on this bug, if I'm reading it correctly, and
this makes the popups look decent.

I have another alternative / complementary patch on the bug if you want, but
this shouldn't be objectionable regardless I think.

Attachment #9207628 - Attachment is obsolete: true

Not sure if you prefer to go this way, your call.

Depends on D107574

Keywords: leave-open
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/545247022645
Fix InfoBackground system color on mac to be the background of popups. r=mstange
https://hg.mozilla.org/integration/autoland/rev/e8d65866112f
Support tooltips in nsNativeBasicThemeCocoa. r=mstange
Keywords: leave-open
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d687480fab36
Add backgrounds for non-native tooltips on Linux and OSX. r=ntim
Severity: -- → S3
Priority: -- → P2
Whiteboard: [mac:nonnativetheme]

Set release status flags based on info from the regressing bug 1690842

Flags: qe-verify+

Reproduced this issue on Firefox Nightly 88.0a1 (2021-03-03) under macOS 10.15.7 by following the infos from Comment 0.

The issue is fixed on latest Nightly 89.0a1 (2021-04-07). Tests were performed on macOS 10.15.7, Ubuntu 20.04 and Windows 10.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: