Bug 1696988 - Fix InfoBackground system color on mac to be the background of popups. r=mstange

Like it is in other platforms. We have no uses of this on the UI currently
except the one in the other patch on this bug, if I'm reading it correctly, and
this makes the popups look decent.

I have another alternative / complementary patch on the bug if you want, but
this shouldn't be objectionable regardless I think.

Differential Revision: https://phabricator.services.mozilla.com/D107574